--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,11 @@
   height : 5%;
   margin : auto;
   color: white;
+  background-color: gray;
+}
+
+.Active {
+  color: white;
   background-color: black;
 }
 
