[style] frame background

--- a/src/css/all.css
+++ b/src/css/all.css
@@ -58,6 +58,7 @@
 }
 
 #main_button_ok:hover{
+    transition: 300ms;
     background: rgba(255, 255, 255, 0.475);
     color:rgb(47, 42, 102);
     font-weight: 300;
@@ -115,6 +116,7 @@
 
 
 .option_ok:hover >img{
+    transition: 300ms;
     opacity: 40%;
 }
 
@@ -138,17 +140,62 @@
     color:white;
 }
 
-#cutbackground_ok{
+.cutbackground_ok{
     background-image: url("../assets/texture.png"), url("../assets/webgradient2.png");
     background-blend-mode: overlay;
     background-size: cover;
     background-position: center;
 }
 
-#cut_button_ok{
-    position:relative;
-    text-align: center;
-    margin: 0 auto;
-    top:30vh;
+/*background*/
+
+
+
+.grid_ok_2{
+    width: 25%;
+    position: absolute;
+    top: 40vh;
+    left: 50vw;
+    /* margin: 0 auto; */
+    display:grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap:0.56vw;
 }
 
+.option_ok_2>img{
+    width:5vw;
+}
+
+.option_ok_2:hover{
+    cursor: pointer;
+}
+
+.option_ok_2:hover>img{
+    border:0.5vw solid white;
+    margin:-0.5vw;
+}
+
+.display_ok{
+
+    margin: 0;
+    padding: 0;
+    position:relative;
+    top:17.4vh;
+    left:-25.5vw;
+}
+
+.leftPic_ok{
+    width:26vw;
+
+}
+
+.back_ok{
+    position:absolute;
+    
+    width:17.5vw;
+    top:12.8%;
+    left:41.2%;
+
+    z-index:1;
+
+}
