--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,34 +46,50 @@
 }
 
 .photoCanvas {
-  width: 24vw;
-  height: 18vw;
+  width: 34vw;
+  height: 23vw;
 }
 .vertical {
-  width: 18vw;
-  height: 24vw;
+  width: 23vw;
+  height: 31vw;
 }
 
 .photoFrame{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
 
   background-color: white;
   width: 36vw;
   height: 48vw;
 }
 
+.photoBack{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 100%;
+  height: 100%;
+
+
+}
 
 .photoItems{
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 
+  position: absolute;
+
   background-color: gray;
   width: 80%;
   height: 85%;
-  margin: auto;
+
 }
 .oneCut{
   height: 100%;
