--- a/src/css/style.css
+++ b/src/css/style.css
@@ -82,13 +82,14 @@
 
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   flex-wrap: wrap;
 
   position: absolute;
 
-  background-color: gray;
-  width: 80%;
-  height: 85%;
+  width: 76%;
+  height: 80%;
 
 }
 .oneCut{
@@ -99,8 +100,8 @@
   height: 50%;
 }
 .fourCuts{
-  width: 50%;
-  height: 50%;
+  width: 49%;
+  height: 49%;
 }
 
 .selectNum{
