--- a/src/css/all.css
+++ b/src/css/all.css
@@ -53,7 +53,7 @@
 
 }
 
-.Button_ok:hover, .option_ok:hover{
+.Button_ok:hover, .option_ok:hover, .Button_ok_2{
     cursor: pointer;
 }
 
@@ -61,7 +61,7 @@
     transition: 300ms;
     background: rgba(255, 255, 255, 0.475);
     color:rgb(47, 42, 102);
-    font-weight: 300;
+
 }
 
 /*Cut*/
@@ -148,19 +148,77 @@
 }
 
 /*background*/
+.box_ok{
+    position:relative;
+    display: flex;
+    top:18vh;
+}
 
+.box_ok_2{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    row-gap: 14%;
+    margin-top: 3%;
+    margin-bottom: 4%;
+}
 
+.display_ok{
+    flex-basis:57%;
+    position:relative;
+
+}
+
+.leftPic_ok{
+    width:24vw;
+
+}
+
+.back_ok{
+    position:absolute;
+    
+    width:16.9vw;
+    top:12%;
+    left:35.2%;
+
+    z-index:1;
+
+}
 
 .grid_ok_2{
-    width: 25%;
-    position: absolute;
-    top: 40vh;
-    left: 50vw;
-    /* margin: 0 auto; */
+    /* position: absolute; */
+
     display:grid;
     grid-template-columns: auto auto auto auto;
-    grid-gap:0.56vw;
+    grid-gap:1vw;
 }
+
+.Button_ok_2{
+    
+    box-sizing: border-box;
+    width: 27vw;
+    height: 7vw;
+
+    background: rgba(255, 255, 255, 0.15);
+    border: 1px solid #ffffff;
+    border-radius: 3.5vw;
+
+    font-size: 2.4vw;
+    color:#FFFFFF;
+    font-style: normal;
+    font-weight: 200;
+    text-align: center;
+    line-height: 7vw;
+
+}
+
+.forhover:hover{
+    transition: 300ms;
+    background: rgba(255, 255, 255, 0.475);
+    color:rgb(47, 42, 102);
+
+}
+
 
 .option_ok_2>img{
     width:5vw;
@@ -175,27 +233,3 @@
     margin:-0.5vw;
 }
 
-.display_ok{
-
-    margin: 0;
-    padding: 0;
-    position:relative;
-    top:17.4vh;
-    left:-25.5vw;
-}
-
-.leftPic_ok{
-    width:26vw;
-
-}
-
-.back_ok{
-    position:absolute;
-    
-    width:17.5vw;
-    top:12.8%;
-    left:41.2%;
-
-    z-index:1;
-
-}
