--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
-html, body{
+html,
+body {
   width: 100%;
   height: 100%;
   margin: 0;
 
-  background: #000000;
+  background: #ffffff;
 }
-#root{
+#root {
   width: 100%;
   height: 100%;
   margin: 0;
