--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+
 html,
 body {
   width: 100%;
   height: 100%;
   margin: 0;
 
-  background: #ffffff;
+  background: #151515;
+
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
 }
 #root {
   width: 100%;
