--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 
 html,
+body,
+#root {
+  height: 100vh;
+}
+
 body {
-  width: 100%;
-  height: 100%;
   margin: 0;
+  padding: 0;
 
   background: #151515;
 
   font-family: "Poppins", sans-serif;
   color: #ffffff;
-}
-#root {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  white-space: pre-wrap;
 }
