--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Aclonica&family=Bad+Script&family=Cutive+Mono&family=Edu+TAS+Beginner:wght@600&family=Gochi+Hand&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 html,
-body,
-#root {
-  height: 100vh;
-}
-
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 
   background: #151515;
+}
 
+#root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+
+  background: #151515;
   font-family: "Poppins", sans-serif;
   color: #ffffff;
   white-space: pre-wrap;
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
